# flaskurlshortener

./: Dockerfile  Makefile  README.md  azure-pipelines.yml  main.py  pyproject.toml  redirects.json  requirements.txt
static/css/: style.css
templates/: error.html  index.html
